# autoflp-desktop

./: .env.vault  .gitignore  Cargo.toml  Dioxus.toml  README.md  tailwind.config.js
src/: input.css  lib.rs  main.rs  models.rs  output.css  schema.rs
src/client/: mod.rs  motd.rs  nav_bar.rs
src/client/account/: account_form.rs  deal_list.rs  deal_viewer.rs  mod.rs
src/client/finance/: page.rs
src/client/inventory/: mod.rs
src/client/meta/: mod.rs
src/finance/: add.rs  next_payment_date.rs  next_payment_date_test.rs
src/lib/: mod.rs  titlecase.rs
src/lib/account/: get_full_name.rs  mod.rs
src/lib/database/: account.rs  mod.rs  models.rs  payment.rs  schema.rs
src/lib/database/account/: get_account.rs  get_account_details.rs  get_account_people.rs  get_creditors.rs  get_people.rs  mod-tests.rs  mod.rs  update_person.rs
src/lib/database/deal/: get_deal.rs  get_deal_payments.rs  get_deals_by_account.rs  get_details.rs  mod.rs
src/lib/database/inventory/: get_inventory.rs  get_inventory_by_id.rs  mod.rs  upsert.rs
src/lib/date/: get_today.rs  mod.rs
src/lib/finance/: amortization_schedule.rs  calc.rs  mod.rs  next_payment_date.rs  next_payment_date_test.rs  round_to_penny.rs
src/lib/inventory/: format.rs  mod.rs  nhtsa.rs
src/lib/pushover/: message.rs  mod.rs  notify_payment.rs  priority.rs  send.rs  sounds.rs
src/lib/qotd/: mod.rs
src/lib/unsplash/: fetch.rs  mod.rs  structs.rs
src/tests/: account.rs  mod.rs  next_payment_date_test.rs  nhtsa.rs
src/tests/pushover/: mod.rs
ui/: appwindow.slint
