[package]
name = "slint-sample"
version = "0.1.0"
authors = ["Matt <mattkbrat@pm.me>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel_cli = "2.1.1"
slint = "1.0"

[build-dependencies]
slint-build = "1.0"
