[package]
name = "autoflp_desktop"
version = "0.1.0"
authors = ["Matt <mattkbrat@pm.me>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.0"
diesel = { version = "2.1.4", features = ["sqlite"] }
dotenvy = "0.15.7"

[build-dependencies]
slint-build = "1.0"
