[package]
name = "autoflp_desktop"
version = "0.1.0"
authors = ["Matt <mattkbrat@pm.me>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.4", features = ["sqlite"] }
dioxus = "0.4.3"
dioxus-desktop = "0.4.3"
dioxus-router = "0.4.3"
dotenvy = "0.15.7"
either = "1.9.0"
serde_json = "1.0.111"
chrono = { versionL = "0.4.33", features = ["serde"] }
chronoutil = "0.2.6"
date_component = "0.4.1"
serde = { version = "1.0.195", features = ["derive"] }
uuid = { version = "1.7.0", features = ["v4"] }

[n.build-dependencies]
